force-app/main/default/objects/Teams_Pinned_Tab__c/Teams_Pinned_Tab__c.object-meta.xml
<CustomObject>
    <label>Teams Pinned Tab</label>
    <pluralLabel>Teams Pinned Tabs</pluralLabel>
    <nameField>
        <label>Pin Number</label>
        <type>AutoNumber</type>
        <displayFormat>PIN-{0000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
    <description>One record per object tab a person has personally pinned onto the "Salesforce Org" Teams tab's header, beyond whatever their own Salesforce app's navigation already shows there automatically (see salesforceTabHome.js's loadAppNavObjectTabs()). Private sharing model and explicitly filtered by OwnerId when queried - this is per-person data, nobody else's pins should ever be visible to another user regardless of org-wide defaults.</description>
</CustomObject>