force-app/main/default/objects/Teams_Pinned_Tab__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Label</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>Cached plural label to show on the tab (e.g. "Opportunities"), captured from Global Describe at pin time - avoids an extra describe call on every page load just to render the tab's text.</description>
</CustomField>