force-app/main/default/objects/Teams_Pinned_Tab__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort Order</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <required>true</required>
    <defaultValue>0</defaultValue>
    <description>Where this pinned tab sits relative to the person's other pins (app-nav tabs always come first, then pins in ascending Sort_Order__c) - a new pin gets max(existing)+1 so pins keep the order they were added in.</description>
</CustomField>